# Happiness-Corruption-Predictor

./: .gitignore  README.md  projectflow.md  projectflow.txt  pyproject.toml  requirements.txt  setup.py
config/: schema.yaml
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_evaluation.py  model_pusher.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py  estimator.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
